@@ -4,6 +4,10 @@ Rilascio 1.70.29    del XX/04/2016
 
 ryLabel: aggiunte le proprietà "align" e "color".
 
+ryDraw: aggiunto border a ryPie e gestito background in ryGram.
+
+ryScript: aggiunto il metodo "refresh".
+
 ==================================
 Rilascio 1.70.28    del 06/04/2016
 ==================================
